--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "grommet": "^2.13.0",
     "grommet-icons": "^4.4.0",
+    "grommet-theme-hpe": "^1.0.5",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
