--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-relay": "^9.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "relay-compiler-language-typescript": "^12.0.1",
     "relay-config": "^9.1.0",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
