--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/enzyme": "^3.10.5",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -30,6 +31,8 @@
     "@types/react-relay": "^7.0.3",
     "@types/react-router-dom": "^5.1.5",
     "@types/relay-runtime": "^8.0.9",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "relay-compiler": "^9.1.0"
   },
   "scripts": {
