--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
     "babel-plugin-relay": "^9.1.0",
     "graphql": "^15.0.0",
     "grommet": "^2.13.0",
     "grommet-icons": "^4.4.0",
+    "mobx": "^5.15.6",
+    "mobx-react-lite": "^2.2.1",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -33,18 +36,18 @@
     "@types/relay-runtime": "^8.0.9",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^7.8.1",
+    "eslint-plugin-react-hooks": "^4.1.1",
     "relay-compiler": "^9.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint",
     "eject": "react-scripts eject",
     "gql-schema": "graphql get-schema -e local",
     "gql-compile": "relay-compiler --extensions ts tsx"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
