--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.20.0",
     "babel-plugin-relay": "^9.1.0",
     "graphql": "^15.0.0",
-    "grommet": "^2.13.0",
+    "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
     "mobx": "^5.15.6",
     "mobx-react-lite": "^2.2.1",
@@ -15,7 +15,7 @@
     "react-dom": "^16.13.1",
     "react-relay": "^9.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "relay-compiler-language-typescript": "^12.0.1",
     "relay-config": "^9.1.0",
     "styled-components": "^5.1.0",
@@ -34,9 +34,11 @@
     "@types/react-relay": "^7.0.3",
     "@types/react-router-dom": "^5.1.5",
     "@types/relay-runtime": "^8.0.9",
+    "@typescript-eslint/parser": "^4.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.8.1",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.1.1",
     "relay-compiler": "^9.1.0"
   },
@@ -63,5 +65,14 @@
   },
   "author": {
     "name": "Aleksandr Shukletsov"
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "plugins": [
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": 0
+    }
   }
 }
