--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/pie": "^0.62.0",
     "axios": "^0.20.0",
     "babel-plugin-relay": "^9.1.0",
     "graphql": "^15.0.0",
