--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
       "react-hooks"
     ],
     "rules": {
-      "react-hooks/exhaustive-deps": 0
+      "react-hooks/exhaustive-deps": 0,
+      "sort-imports": "error"
     }
   }
 }
