--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@nivo/pie": "^0.62.0",
     "axios": "^0.20.0",
-    "babel-plugin-relay": "^9.1.0",
     "graphql": "^15.0.0",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
@@ -14,11 +13,8 @@
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-relay": "^9.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
-    "relay-compiler-language-typescript": "^12.0.1",
-    "relay-config": "^9.1.0",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
@@ -32,17 +28,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/react-relay": "^7.0.3",
     "@types/react-router-dom": "^5.1.5",
-    "@types/relay-runtime": "^8.0.9",
     "@typescript-eslint/parser": "^4.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.8.1",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.1.1",
-    "eslint-plugin-simple-import-sort": "^5.0.3",
-    "relay-compiler": "^9.1.0"
+    "eslint-plugin-simple-import-sort": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +43,7 @@
     "test": "react-scripts test",
     "lint": "eslint",
     "eject": "react-scripts eject",
-    "gql-schema": "graphql get-schema -e local",
-    "gql-compile": "relay-compiler --extensions ts tsx"
+    "gql-schema": "graphql get-schema -e local"
   },
   "browserslist": {
     "production": [
