--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nivo/pie": "^0.62.0",
     "axios": "^0.20.0",
     "graphql": "^15.0.0",
+    "graphql-zeus": "^2.8.5",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
     "mobx": "^5.15.6",
@@ -43,6 +44,7 @@
     "test": "react-scripts test",
     "lint": "eslint",
     "eject": "react-scripts eject",
+    "gql:update-model": "zeus http://localhost:4000/graphql ./src/common/gql --ts",
     "gql-schema": "graphql get-schema -e local"
   },
   "browserslist": {
