--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "graphql-zeus": "^2.8.5",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
+    "i18next": "^19.8.3",
     "jss": "^10.5.0",
     "mobx": "^5.15.6",
     "mobx-react-lite": "^2.2.1",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.3",
     "react-jss": "^10.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
