--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "test": "react-scripts test",
     "lint": "eslint",
     "eject": "react-scripts eject",
-    "gql:update-model": "zeus http://localhost:4000/graphql ./src/common/gql --ts",
+    "gql:update-model": "zeus http://localhost:4000/graphql ./src/common/api --ts",
     "gql-schema": "graphql get-schema -e local"
   },
   "browserslist": {
