--- a/__tsconfig__.json
+++ b/__tsconfig__.json
@@ -7,23 +7,15 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
     "noImplicitAny": false,
-    "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": false,
     "target": "es5"
   },
-  "include": [
-    "src",
-    "react-app-env.d.ts"
-  ]
+  "include": ["src", "react-app-env.d.ts"]
 }
