--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "grommet-icons": "^4.4.0",
     "i18next": "^19.8.3",
     "jss": "^10.5.0",
-    "mobx": "^5.15.6",
-    "mobx-react-lite": "^2.2.1",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.3",
     "react-jss": "^10.5.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.0",
     "styled-components": "^5.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -38,10 +36,11 @@
     "@typescript-eslint/parser": "^4.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.8.1",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-react-hooks": "^4.1.1",
-    "eslint-plugin-simple-import-sort": "^5.0.3"
+    "eslint": "^7.14.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^6.0.1",
+    "patch-package": "^6.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,8 +48,9 @@
     "test": "react-scripts test",
     "lint": "eslint",
     "eject": "react-scripts eject",
-    "gql:update-model": "zeus http://localhost:4000/graphql ./src/common/api --ts",
-    "gql-schema": "graphql get-schema -e local"
+    "postinstall": "patch-package",
+    "gql:model": "zeus http://localhost:4000/graphql ./src/common/api --ts",
+    "gql:schema": "graphql get-schema -e local"
   },
   "browserslist": {
     "production": [
