setting up OAuth

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+ALLOWED_VARS=should_prefixed_with_REACT_APP
+
 REACT_APP_API_URL=http://localhost:4000
+REACT_APP_YANDEX_APP_ID=12345
+
 SKIP_PREFLIGHT_CHECK=true
 EXTEND_ESLINT=true
