--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@nivo/pie": "^0.62.0",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-zeus": "^2.8.5",
